# VERITAS

./: .env.example  .gitignore  README.md  SUBMISSION.md  pyproject.toml
.raindrop/: agents.yaml
certificates/: crt_03583d4dce29.json  crt_03583d4dce29.md  crt_04274e2f736e.json  crt_04274e2f736e.md  crt_042e94b9dd6d.json  crt_042e94b9dd6d.md  crt_051f5e79a20f.json  crt_051f5e79a20f.md  crt_069c999c77bf.json  crt_069c999c77bf.md  crt_07db093f30e9.json  crt_07db093f30e9.md  crt_07e452ed820d.json  crt_07e452ed820d.md  crt_097a41337b8d.json  crt_097a41337b8d.md  crt_09fcb222176e.json  crt_09fcb222176e.md  crt_09ff7c964b7a.json  crt_09ff7c964b7a.md  crt_0dba2b25e81d.json  crt_0dba2b25e81d.md  crt_0e77524e28be.json  crt_0e77524e28be.md  crt_106bb3ab6be3.json  crt_106bb3ab6be3.md  crt_1236aa15adcb.json  crt_1236aa15adcb.md  crt_128eb78d58ea.json  crt_128eb78d58ea.md  crt_12a161d04b10.json  crt_12a161d04b10.md  crt_12d856279fc7.json  crt_12d856279fc7.md  crt_140b40676640.json  crt_140b40676640.md  crt_15e18368fdc6.json  crt_15e18368fdc6.md  crt_1602542ac38b.json  crt_1602542ac38b.md  (+286 more)
cold_open/: legal_demo.py
crucible/: __init__.py  certificate.py  courtroom_demo.py  courtroom_run.py  demo.py  detectors.py  eval_loop.py  generator.py  hosted.py  ledger.py  live_swarm.py  orchestrator.py  raindrop_bridge.py  replay_server.py  schemas.py  self_improvement.py  spine_acceptance.py  swarm.py  trace.py
harness/: __init__.py  beats.py  fallback.py  workshop.py
modal/: check_fulllive_e2e.py  check_verdict_contract.py  freeze_cached_verdicts.py  run_megastructure.py  (+2 more)
(+40 files in other folders)
