[project]
name = "veritas-phase-zero"
version = "0.1.0"
description = "Phase-zero live integration proofs for VERITAS."
requires-python = ">=3.11"
dependencies = [
    "modal>=1.3",
    "openai>=2",
    "openai-agents[modal]>=0.17.4",
    "pydantic>=2",
    "python-dotenv>=1",
    "raindrop-openai-agents>=0.0.3",
]

[tool.pytest.ini_options]
testpaths = []
